deploy/k8s/auth-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: auth-depl
spec:
    replicas: 1
    selector:
        matchLabels:
            app: auth
    template:
        metadata:
            labels:
                app: auth
        spec:
            containers:
                - name: auth
                  image: filipeqs/nexusfit.auth.api
---
apiVersion: v1
kind: Service
metadata:
    name: auth-srv
spec:
    selector:
        app: auth
    ports:
        - name: auth
          protocol: TCP
          port: 55105
          targetPort: 55105
# LOCALHOT
# apiVersion: v1
# kind: Service
# metadata:
#   name: auth-srv
# spec:
#   selector:
#     app: auth
#   type: LoadBalancer
#   ports:
#     - name: auth
#       protocol: TCP
#       port: 80
#       targetPort: 80
