deploy/k8s/authdb-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: authdb-depl
spec:
    replicas: 1
    selector:
        matchLabels:
            app: authdb
    template:
        metadata:
            labels:
                app: authdb
        spec:
            containers:
                - name: authdb
                  image: mcr.microsoft.com/mssql/server:2022-latest
---
apiVersion: v1
kind: Service
metadata:
    name: authdb-srv
spec:
    selector:
        app: authdb
    ports:
        - name: authdb
          protocol: TCP
          port: 1433
          targetPort: 1433
# LOCALHOST
# apiVersion: v1
# kind: Service
# metadata:
#   name: authdb-srv
# spec:
#   selector:
#     app: authdb
#   type: LoadBalancer
#   ports:
#     - name: authdb
#       protocol: TCP
#       port: 1433
#       targetPort: 1433
