deploy/k8s/elasticsearch-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: elasticsearch-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: elasticsearch
  template:
    metadata:
      labels:
        app: elasticsearch
    spec:
      containers:
        - name: elasticsearch
          image: docker.elastic.co/elasticsearch/elasticsearch:7.9.2
          ports:
            - containerPort: 9200
          volumeMounts:
            - mountPath: /usr/share/elasticsearch/data
              name: elasticsearch-data
      volumes:
        - name: elasticsearch-data
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch
spec:
  selector:
    app: elasticsearch
  ports:
    - name: 'elasticsearch-9200'
      port: 9200
      targetPort: 9200
