deploy/k8s/exercises-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: exercises-depl
spec:
    selector:
        matchLabels:
            app: exercises
    template:
        metadata:
            labels:
                app: exercises
        spec:
            containers:
                - name: exercises
                  image: filipeqs/nexusfit.exercises.api
---
apiVersion: v1
kind: Service
metadata:
    name: exercises-srv
spec:
    selector:
        app: exercises
    ports:
        - port: 5001
          targetPort: 5001
