deploy/k8s/exercisesdb-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: exercisesdb-depl
spec:
    selector:
        matchLabels:
            app: exercisesdb
    template:
        metadata:
            labels:
                app: exercisesdb
        spec:
            containers:
                - name: exercisesdb
                  image: mongo
---
apiVersion: v1
kind: Service
metadata:
    name: exercisesdb-srv
spec:
    selector:
        app: exercisesdb
    ports:
        - port: 27017
          targetPort: 27017
