deploy/k8s/kibana-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: kibana-depl
spec:
    selector:
        matchLabels:
            app: kibana
    template:
        metadata:
            labels:
                app: kibana
        spec:
            containers:
                - name: kibana
                  image: docker.elastic.co/kibana/kibana:7.9.2
---
apiVersion: v1
kind: Service
metadata:
    name: kibana-srv
spec:
    selector:
        app: kibana
    ports:
        - name: kibana
          port: 5601
          targetPort: 5601
